
New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2017-06-20 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.7.3.2


2017-0619 niel
	Add: Created custom Model class to extend Lithium's. It adds a new method `isModified` to
		check if an existing table entity has been changed. This allows Updates to skip saves if
		nothing has changed.
	Fix: Remove type declaration from Model::isModified() signature as it doesn't work for parent
		classes. The type is tested inside the method instead.
2017-06-14 niel
	Fix: Replace overlooked occurences of 'predate' with 'created' in queries. Closes Issue 2474.
2017-06-09 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.7.3.1


2017-06-07 DariusIII
	Fix: Missed changing Steam class setLastUpdated function for settings table change (fixes
		Issue 2468)
2017-06-02 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.7.3.0


2017-05-31 niel
	Fix: Make DbUpdate::loadTables() default to not having an "OPTIONALLY ENCLOSED BY" clause, as it
		causes issues with fields starting with a double-quote.
2017-05-30 niel
	Mrg: PR 2445, from nightah - Reworked all Anime release naming regexes.
	Fix: Missing category from new Predb entries that was accidentally overlooked during recent
		refactoring.
2017-05-28 niel
	Chg: Predb model: Change occurences of 'name' to 'title', even variable names as it is obviously
		confusing me!
2017-05-26 niel
	Add: Adding post-install-cmd to composer.json. It runs addHooks.sh script if installed in dev
		mode.
2017-05-25 b3rs3rk
	Fix: Two more predate instances that should be created
2017-05-24 b3rs3rk
	Fix: Tmux monitor query still looking for predate column