@@ -8,7 +8,9 @@ All entries are dated according to merging into the code in dev branch. THIS MEA
 NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
-
+2017-06-21 niel
+	Fix: Add 'ORDER BY 'id' ASC' clause to SQL patch 0482, to make sure they don't get done out
+		of order, causing duplicate index errors.
 2017-06-20 niel
 	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.7.3.2
 
